<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtls_adapter_ros_template</name>
  <version>0.0.0</version>
  <description>This is a ros2 template package for RTLS devices</description>
  <maintainer email="alphonsustay@github.com">alph</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>rmf_rtls_msgs</depend>
  <depend>geometry_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
